force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/TOBJ_AnaliseFornecedor__c.object-meta.xml
<CustomObject>
    <label>Análise Fornecedor</label>
    <nameField>
        <displayFormat>AVF-{YYYY}{MM}-{0000}</displayFormat>
        <label>Análise Fornecedor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Análises dos Fornecedores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>