force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_AreaAtuacaoEspecialidade__c.field-meta.xml
<CustomField>
    <fullName>TCF_AreaAtuacaoEspecialidade__c</fullName>
    <label>Área de Atuação/Especialidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BACKLOAD</fullName>
            </value>
            <value>
                <fullName>DISPOSITIVOS DE SEGURANÇA</fullName>
            </value>
            <value>
                <fullName>ELEMENTOS DE FIXAÇÃO</fullName>
            </value>
            <value>
                <fullName>EQUIPAMENTO</fullName>
            </value>
            <value>
                <fullName>EQUIPAMENTOS ALUGADOS</fullName>
            </value>
            <value>
                <fullName>ESTRUTURA</fullName>
            </value>
            <value>
                <fullName>INSTRUMENTAÇÃO</fullName>
            </value>
            <value>
                <fullName>MATERIAIS PARA IÇAMENTO</fullName>
            </value>
            <value>
                <fullName>OUTROS</fullName>
            </value>
            <value>
                <fullName>TUBULAÇÃO E ACESSÓRIOS</fullName>
            </value>
            <value>
                <fullName>VÁLVULAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>