force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_Avaliadores__c.field-meta.xml
<CustomField>
    <fullName>TCF_Avaliadores__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Avaliadores</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TRN_AnaliseFornecedor_Usuario</relationshipName>
    <type>Lookup</type>
</CustomField>