force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_DataAvaliacao__c.field-meta.xml
<CustomField>
    <fullName>TCF_DataAvaliacao__c</fullName>
    <label>Data de Avaliação</label>
    <type>DateTime</type>
</CustomField>