force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_EmpresaAvaliada__c.field-meta.xml
<CustomField>
    <fullName>TCF_EmpresaAvaliada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa Avaliada</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Análises dos Fornecedores</relationshipLabel>
    <relationshipName>TRN_AnaliseFornecedor_Conta</relationshipName>
    <type>Lookup</type>
</CustomField>