force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_EtapaInspecao__c.field-meta.xml
<CustomField>
    <fullName>TCF_EtapaInspecao__c</fullName>
    <label>Etapa de Inspeção</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DELIVERY</fullName>
            </value>
            <value>
                <fullName>DIMENSIONAL</fullName>
            </value>
            <value>
                <fullName>DOCUMENTATION ANALYSIS</fullName>
                <label>DOCUMENTAÇÃO</label>
            </value>
            <value>
                <fullName>LIBERAÇÃO DE MATERIAL</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
                <label>OUTROS</label>
            </value>
            <value>
                <fullName>PAINTING</fullName>
                <label>PINTURA</label>
            </value>
            <value>
                <fullName>RECEBIMENTO</fullName>
            </value>
            <value>
                <fullName>WELDING</fullName>
                <label>SOLDAGEM</label>
            </value>
            <value>
                <fullName>PRESSURE TEST</fullName>
                <label>TESTE DE PRESSÃO</label>
            </value>
            <value>
                <fullName>MATERIAL RELEASE</fullName>
            </value>
            <value>
                <fullName>PMI FOLLOW UP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>