force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_Inspecao_1_1__c.field-meta.xml
<CustomField>
    <fullName>TCF_Inspecao_1_1__c</fullName>
    <formula>IF(
	ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;), 
	&quot;Recebimento de materiais, baseado em especificações / Ordem de Compra&quot;,
	&quot;Material Receipt, based on specifications / Purchase Order&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1.1</label>
    <type>Text</type>
</CustomField>