force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_Inspecao_1_2__c.field-meta.xml
<CustomField>
    <fullName>TCF_Inspecao_1_2__c</fullName>
    <formula>IF(
	ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;), 
	&quot;A documentação foi entregue junto com o material.&quot;,
	&quot;The documentation was delivered with the material.&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1.2</label>
    <type>Text</type>
</CustomField>