force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_Inspecao_1_3__c.field-meta.xml
<CustomField>
    <fullName>TCF_Inspecao_1_3__c</fullName>
    <formula>IF(
	ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;), 
	&quot;Emissão de documentação (certificados, relatórios, databook) está de acordo com o solicitado.&quot;,
	&quot;Issuance of documentation (certificates, reports, databook) is in accordance with the requested.&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1.3</label>
    <type>Text</type>
</CustomField>