force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_Inspecao_CriterioPontuacao__c.field-meta.xml
<CustomField>
    <fullName>TCF_Inspecao_CriterioPontuacao__c</fullName>
    <formula>IF(
				ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;),
				IMAGE(&quot;/servlet/servlet.ImageServer?id=0157h000000Pydx&amp;oid=00D7h0000004f0j&amp;lastMod=1620845842000&quot;, &quot;criterio-pontuacao_PT&quot;),
				IMAGE(&quot;/servlet/servlet.ImageServer?id=0157h000000PzCT&amp;oid=00D7h0000004f0j&amp;lastMod=1620845886000&quot;, &quot;criterio-pontuacao_EN&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>⠀</label>
    <type>Text</type>
</CustomField>