force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_Inspecao_MediaSecao1__c.field-meta.xml
<CustomField>
    <fullName>TCF_Inspecao_MediaSecao1__c</fullName>
    <label>Média Seção 1</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>