force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_Inspecao_Peso_1_3__c.field-meta.xml
<CustomField>
    <fullName>TCF_Inspecao_Peso_1_3__c</fullName>
    <defaultValue>1</defaultValue>
    <label>1.3 Peso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>