force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_Inspecao_Resposta_1_2__c.field-meta.xml
<CustomField>
    <fullName>TCF_Inspecao_Resposta_1_2__c</fullName>
    <label>1.2 Resposta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TGP_Pontuacao_0_5_NA</valueSetName>
    </valueSet>
</CustomField>