force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_Interaction__c.field-meta.xml
<CustomField>
    <fullName>TCF_Interaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interaction</label>
    <referenceTo>TW1_Interaction__c</referenceTo>
    <relationshipLabel>Análises dos Fornecedores</relationshipLabel>
    <relationshipName>TRN_AnaliseFornecedor_Interaction</relationshipName>
    <type>Lookup</type>
</CustomField>