force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_LogoModec__c.field-meta.xml
<CustomField>
    <fullName>TCF_LogoModec__c</fullName>
    <formula>IMAGE(&quot;/servlet/servlet.ImageServer?id=0157h000000PyWw&amp;oid=00D7h0000004f0j&amp;lastMod=1620335252000&quot;, &quot;logo-modec&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo</label>
    <type>Text</type>
</CustomField>