force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_NivelAprovacao__c.field-meta.xml
<CustomField>
    <fullName>TCF_NivelAprovacao__c</fullName>
    <label>Nível de Aprovação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>