force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_NivelAprovacaoImagem__c.field-meta.xml
<CustomField>
    <fullName>TCF_NivelAprovacaoImagem__c</fullName>
    <formula>IF(
ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;),
IMAGE(&quot;/servlet/servlet.ImageServer?id=0157h000000PzCY&amp;oid=00D7h0000004f0j&amp;lastMod=1620845942000&quot;, &quot;criterio-pontuacao_PT&quot;),
IMAGE(&quot;/servlet/servlet.ImageServer?id=0157h000000PzCd&amp;oid=00D7h0000004f0j&amp;lastMod=1620845979000&quot;, &quot;criterio-pontuacao_EN&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>⠀</label>
    <type>Text</type>
</CustomField>