force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_NivelDeAprovacao__c.field-meta.xml
<CustomField>
    <fullName>TCF_NivelDeAprovacao__c</fullName>
    <label>Nível de Aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inaceitável</fullName>
            </value>
            <value>
                <fullName>Ruim</fullName>
            </value>
            <value>
                <fullName>Satisfatório</fullName>
            </value>
            <value>
                <fullName>Bom</fullName>
            </value>
            <value>
                <fullName>Excelente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>