force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_Observacoes_1_1__c.field-meta.xml
<CustomField>
    <fullName>TCF_Observacoes_1_1__c</fullName>
    <label>1.1 Observações</label>
    <type>TextArea</type>
</CustomField>