force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_Observacoes_1_3__c.field-meta.xml
<CustomField>
    <fullName>TCF_Observacoes_1_3__c</fullName>
    <label>1.3 Observações</label>
    <type>TextArea</type>
</CustomField>