force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_Origem__c.field-meta.xml
<CustomField>
    <fullName>TCF_Origem__c</fullName>
    <label>Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interaction</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>