force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_PB__c.field-meta.xml
<CustomField>
    <fullName>TCF_PB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PB</label>
    <type>Checkbox</type>
</CustomField>