force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_PontuacaoTotal__c.field-meta.xml
<CustomField>
    <fullName>TCF_PontuacaoTotal__c</fullName>
    <label>Pontuação Total</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>