force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_ProjetoAvaliado__c.field-meta.xml
<CustomField>
    <fullName>TCF_ProjetoAvaliado__c</fullName>
    <label>Projeto avaliado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>