force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_QualificacaoFinalFornecedor__c.field-meta.xml
<CustomField>
    <fullName>TCF_QualificacaoFinalFornecedor__c</fullName>
    <label>⠀</label>
    <length>65536</length>
    <type>Html</type>
</CustomField>