force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_Request__c.field-meta.xml
<CustomField>
    <fullName>TCF_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request</label>
    <referenceTo>TW1_Request__c</referenceTo>
    <relationshipLabel>Análises dos Fornecedores</relationshipLabel>
    <relationshipName>TRN_AnaliseFornecedor_Request</relationshipName>
    <type>Lookup</type>
</CustomField>