force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_Status__c.field-meta.xml
<CustomField>
    <fullName>TCF_Status__c</fullName>
    <defaultValue>&quot;Aberta&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aberta</fullName>
            </value>
            <value>
                <fullName>Fechada</fullName>
            </value>
            <value>
                <fullName>Não Concluída</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>