force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_UnidadeMODEC__c.field-meta.xml
<CustomField>
    <fullName>TCF_UnidadeMODEC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidade MODEC</label>
    <referenceTo>TW1_Facility__c</referenceTo>
    <relationshipLabel>Análises dos Fornecedores</relationshipLabel>
    <relationshipName>TRN_AnaliseFornecedorUnidade</relationshipName>
    <type>Lookup</type>
</CustomField>