force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/fields/TCF_Vazio__c.field-meta.xml
<CustomField>
    <fullName>TCF_Vazio__c</fullName>
    <label>⠀</label>
    <length>1</length>
    <type>Text</type>
</CustomField>