force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/recordTypes/TRT_Inspecao.recordType-meta.xml
<RecordType>
    <fullName>TRT_Inspecao</fullName>
    <active>true</active>
    <label>Inspeção</label>
</RecordType>