force-app/main/default/objects/TOBJ_AnaliseFornecedor__c/validationRules/ImpedirAlterarAvaliacaoFinalizada.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedirAlterarAvaliacaoFinalizada</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				RecordType.DeveloperName = &quot;TRT_Inspecao&quot;,
				NOT(ISCHANGED(TCF_Status__c)),
				OR(
								ISPICKVAL(TCF_Status__c,&quot;Fechada&quot;),
								ISPICKVAL(TCF_Status__c,&quot;Não Concluída&quot;)
							)
)</errorConditionFormula>
    <errorMessage>Esta Avaliação não pode mais ser alterada.</errorMessage>
</ValidationRule>